# horror-film-analysis

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
blood_money/: 01_acquire_tmdb_data.py  02_load_tmdb_to_sql.py  03_imdb_to_csv.py  04_merge_imdb_data.py  05_process_rt_data.py  06_normalize_genres.py  __init__.py  config.py  plots.py
docs/: analysis_notes.md  mistakes.md
