[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "blood_money"
version = "0.0.1"
description = "Data analysis of horror film's finance, reception, and aesthetics."
authors = [
  { name = "Jose Angel Zamudio" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "==3.12.10"


[tool.ruff]
line-length = 99
src = ["blood_money"]
include = ["pyproject.toml", "blood_money/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["blood_money"]
force-sort-within-sections = true

